syntax = 'proto3';


message Block {
    string text =1;
    bool isAnswer =2;
    bool showInOption =3;
}
message Option{
    string text =1;
    bool isCorrectAnswer =2;
}
message Question{
    string type = 1;
    string anagramType = 2;
    string solution =4;
    string title =5;
    repeated Block blocks =6;
    repeated Option options =7;
}


message GetQuestionResponse {
    repeated Question questions = 1;
    bool isMore = 2;
}

message GetQuestionRequest {
    string query = 1;
    int32 page = 2;
    int32 limit =3;
    string filter =4;
}

message PostQuestionRequest{
    string type = 1;
    string anagramType = 2;
    string solution =4;
    string title =5;
    repeated Block blocks =6;
    repeated Option options =7;
}

message PostQuestionResponse{
    string msg = 1;
}

service QuestionService {
    rpc GetQuestions(GetQuestionRequest) returns (GetQuestionResponse) {};
    rpc PostQuestions(PostQuestionRequest) returns (PostQuestionResponse) {};
   
}
